package pckg_executable_action;

service ActionRequest {
  rpc StreamAction (ExecutableAction) returns (RequestAck) {}
  rpc Ping (ExecutableAction) returns (RequestAck) {}
  rpc TestStreamStream (stream TestRequest) returns (stream TestResponse) {}
  rpc CancelActionRemote (CancelMessage) returns (RequestAck) {}
}

message TestRequest {
  required int32 id = 1;
}

message TestResponse {
  required int32 id = 1;
}

message RequestAck {
  required int32 task_id = 1;
  required string message = 2;
  required string status = 3;
}

message ExecutableAction {
  required string action_id = 1;
}

message CancelMessage {
  required string task_id = 1;
}