package pckg_received_message;

import "executable_action.proto";

service ActionRequest {
  rpc SendAction (ReceivedMessage) returns (RequestAck) {}
  rpc CancelAction (CancelMessage) returns (RequestAck) {}
}

message RequestAck {
  optional int32 task_id = 1;
  optional string message = 2;
  optional string status = 3;
}

message Cursor {
  optional int32 index = 1;
  optional string position = 2;
}

message ReceivedMessage {
  optional string name = 1;
  optional string namespace = 2;
  optional Cursor cursor = 3;
}

message CancelMessage {
  optional int32 task_id = 1;
}